--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h1>Welcome to the Telegram Mini App</h1>
     <div class="container">
         <p>Click the button below to interact with the app:</p>
-        <button id="actionButton">Perform Action</button>
+        <button id="actionButton" href="https://luglawhaulsano.net/4/8636910">Perform Action</button>
     </div>
 
     <script>
