--- a/index.html
+++ b/index.html
@@ -6,13 +6,21 @@
     <title>Telegram Mini App</title>
     
     <!-- Include the provided JavaScript file -->
-    <script src="//niphaumeenses.net/vignette.min.js" data-zone="8636909" data-sdk="show_8636909"></script>
+    <script src='//niphaumeenses.net/vignette.min.js' data-zone='8636909' data-sdk='show_8636909'></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awsome/6.0.0-beta3/css/all/min.css">
     
     <style>
         body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
             font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 20px;
+            background-color: #1a1a1a;
+            color: #ffd700;
+            padding: 20px;
+            box-sizing: 
         }
         .container {
             margin-top: 50px;
