--- a/index.html
+++ b/index.html
@@ -20,37 +20,203 @@
             background-color: #1a1a1a;
             color: #ffd700;
             padding: 20px;
-            box-sizing: 
+            box-sizing: border-box;
+            padding-bottom: 90px;
         }
-        .container {
-            margin-top: 50px;
+        .user-card{
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            padding: 20px;
+            width: 90%;
+            max-width: 400px;
+            background: #333333;
+            border: 2px solid #ffd700;
+            box-sizing: border-box;
         }
-        button {
+        .user-info{
+            display: flex;
+            align-items: center;
+            padding-right: 10px;
+        }
+        .user-avatar{
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            margin-right: 15px;
+            border: 2px solid #ffd700;
+        }
+        .user-details h2{
+            margin: 0;
+            font-size: 18px;
+        }
+        .user-details p{
+            margin: 0;
+        }
+        .balance-info{
+            text-align: right;
+        }
+        .ad-container{
+            text-align: center;
+            padding: 30px;
+            background: #333333;
+            border: 2px solid #ffd700;
+            border-radius: 15px;
+            width: 90%;
+            max-width: 400px;
+            color: #ffd700;
+            margin: 250pc auto 20px;
+            box-sizing: border-box;
+        }
+        .ad-container h1{
+            margin-bottom: 10px;
+            color: #ffd700;
+            font-size: 1.6rem;
+        }
+        .reward-button{
+            padding: 15px 30px;
+            font-size: 18px;
+            cursor: pointer;
+            color: #1a1a1a;
+            background-color: #ffd700;
+            border: none;
+            border-radius: 8px;
+            transition: background 0.3s; transform: 0.3s ;
+            box-shadow: 0px 5px 15px rgba(255, 215, 0, 0.4);
+            font-weight: bold;
+            margin-top: 10px;
+        }
+        .reward-button:hover{
+            background-color: #e5c100;
+            transform: scale(1.05);
+        }
+        .bottom-nav{
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            max-width: 600px;
+            background: #333333;
+            padding: 15px 0;
+            color: #ffd700;
+            box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.2);
+            box-sizing: border-box;
+        }
+        .bottom-nav a{
+            text-align: center;
+            color: #ffd700;
+            font-size: 1.2em;
+            text-decoration: none;
+            flex: 1;
+            transition: color 0.3s;
+        }
+        .bottom-nav a:hover{
+            color: #fff700;
+        }
+        .bottom-nav i{
+            display: block;
+            font-size: 1.5em;
+            margin-bottom: 5px;
+        }
+        .modal{
+            position: fixed;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            background: rgba(0, 0, 0, 0.7);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            visibility: hidden;
+            opacity: 0;
+            transition: visibility 0.3s opacity 0.3s;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+        .modal.active{
+            visibility: visible;
+            opacity: 1;
+        }
+        .modal-content{
+            background: #333333;
+            padding: 20px;
+            border-radius: 10px;
+            width: 90%;
+            max-width: 400px;
+            text-align: center;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+            border: 2px solid #ffd700;
+            box-sizing: border-box;
+        }
+        .modal-content h3{
+            margin-bottom: 20px;
+            color: #ffd700;
+        }
+        .modal-content input{
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 15px;
+            background-color: #222;
+            color: #ffd700;
+            box-sizing: border-box;
+        }
+        .modal-content button{
             padding: 10px 20px;
             font-size: 16px;
-            background-color: #0088cc;
-            color: white;
+            cursor: pointer;
+            color: #1a1a1a;
+            background-color: #ffd700;
             border: none;
             border-radius: 5px;
-            cursor: pointer;
+            transition: background 0.3s ; 
         }
-        button:hover {
-            background-color: #005f8c;
+        .modal-content button:hover{
+            background-color: #e5c100;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to the Telegram Mini App</h1>
-    <div class="container">
-        <p>Click the button below to interact with the app:</p>
-        <button id="actionButton"> <a href="https://luglawhaulsano.net/4/8636910">Perform Action</a></button>
+    <div class="user-card">
+        <div class="user-info">
+            <img src="https://i.postimg.cc/1tRB4Pd7/photo-6325394857799037299-c-1.jpg" alt="user-avatar" class="user-avatar">
+            <div class="user-details">
+                <h2 id="userName">Your Name</h2>
+                <p>Number: <span id="userNumber">00000</span></p>
+            </div>
+        </div>
     </div>
-
+    <div class="ad-container">
+        <h1>Complete Reward Task</h1>
+        <button class="reward-button" onclick="showRewardedAd()">Reward Task</button>
+    </div>
+    <div class="button-nav">
+        <a href="#" class="fas fa-home">Home</a>
+        <a href="#" class="fas fa-share-alt">Share</a>
+        <a href="https://t.me/@sottyanweshii" target="_blank"><i class="fas fa-user-tie">Developer</i></a>
+    </div>
+    <div class="modal" id="userModal">
+        <div class="modal-content">
+            <h3>What's your name and number?</h3>
+            <input type="text" id="inputName" placeholder="Enter your name:">
+            <input type="text" id="inputNumber" placeholder="Enter your number:">
+            <button onclick="saveUserInfo()">Save</button>
+        </div>
+    </div>
     <script>
-        // Example JavaScript to handle button click
-        document.getElementById('actionButton').addEventListener('click', function () {
-            alert('Action performed!');
-        });
+        let points = 0;
+        let balance = 0;
+        document.addEventListener('DOMContentLoaded', function(){
+            const savedName = localStorage.getItem('userName');
+            const savedNumber = localStorage.getItem('userNumber');
+            const userModal = document.getElementsById('userModal');
+            
+        })
     </script>
 </body>
 </html>
