--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 <body>
     <div class="user-card">
         <div class="user-info">
-            <img src="https://i.postimg.cc/1tRB4Pd7/photo-6325394857799037299-c-1.jpg" alt="user-avatar" class="user-avatar">
+            <img src="https://raw.githubusercontent.com/whitangel/Telegram-Mini-App-/43e73b4548df82f596aa6178c89428d59e6f55a0/S_20241211_051056_0000.png" alt="user-avatar" class="user-avatar">
             <div class="user-details">
                 <h2 id="userName">Your Name</h2>
                 <p>Number: <span id="userNumber">00000</span></p>
