--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <div class="balance-info">
         <p>Points: <span class="userPoints">0
         </span></p>
-        <p>Balance: $<span class="userBalance">0.00</span></p>
+        <p>AdCoin:<span class="userBalance">0.00</span>AD</p>
     </div></div>
     <!-- Reward Center -->
 
